Fixed white space created in some pages when opening main menu and cart menu

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,9 @@ html * {
 /* body {
   background-color: aqua !important;
 } */
-
+body {
+  width: 100%;
+}
 body::-webkit-scrollbar {
   width: 6px;
 }
