--- a/src/Screens/Footer/FooterDiv1/FooterDiv1.css
+++ b/src/Screens/Footer/FooterDiv1/FooterDiv1.css
@@ -1,14 +1,15 @@
 .footer-div-1 {
   width: 100%;
-  /* height: 40vh; */
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgb(24, 23, 23);
+  padding-bottom: 1rem;
 }
 .footer-div-1-1 {
   width: 80%;
-  height: 23vh;
+  height: auto;
   display: flex;
   /* justify-content: center; */
   align-items: center;
@@ -26,7 +27,7 @@
 
 @media only screen and (max-width: 700px) {
   .footer-div-1-1 {
-    height: 40vh;
+    height: auto;
   }
   .footer-div-1-1 ul {
     flex-direction: column;
@@ -54,7 +55,7 @@
 
 .footer-div-1-2 {
   width: 80%;
-  height: 35vh;
+  min-height: 12vh !important;
   color: aliceblue;
   display: grid;
   margin-top: 2.5rem;
@@ -107,6 +108,9 @@
   }
   .footer-div-1-2-shop-down {
     display: inline-block !important;
+  }
+  .footer-div-1-2-nav-1-open-active {
+    height: 27vh;
   }
   /* .footer-div-1-2-nav-1-open {
     height: 30vh;
