--- a/src/Screens/Footer/FooterDiv2/FooterDiv2.css
+++ b/src/Screens/Footer/FooterDiv2/FooterDiv2.css
@@ -1,7 +1,9 @@
 .footer-div-2 {
   width: 100%;
-  height: 18vh;
+  height: auto;
   background-color: rgb(32, 32, 32);
+  padding-bottom: 2rem;
+  padding-top: 1rem;
   /* margin-bottom: 80vh; */
 }
 
